# ThreadTypeSelector

./: CMakeLists.txt  README.md  main.cpp
include/: funcs.hpp  types.h
